@@ -18,11 +18,6 @@
 #ifndef _LLDP_TLV_H
 #define _LLDP_TLV_H
 
-/* Should be defined in net/ethertypes.h */
-#ifndef ETHERTYPE_LLDP
-#define ETHERTYPE_LLDP	0x88cc
-#endif
-
 #define LLDP_MULTICAST_ADDR	{						\
 	0x01, 0x80, 0xc2, 0x00, 0x00, 0x0e					\
 }
